@@ -1,16 +1,16 @@
 Package: oligo
-Version: 1.11.26
+Version: 1.11.27
 Title: Oligonucleotide arrays tools.
 Author: Benilton Carvalho <carvalho@bclab.org>, Rafael A. Irizarry with contributions from Ben Bolstad, Vince Carey, Robert Gentleman, Wolfgang Huber
 Maintainer: Benilton Carvalho <carvalho@bclab.org>
 Depends: R (>= 2.11.0),
+         oligoClasses (>= 1.9.34)
 Imports: affyio (>= 1.15.2),
          affxparser (>= 1.17.3),
          Biobase (>= 2.7.3),
          DBI (>= 0.2-4),
          graphics,
          methods,
-         oligoClasses (>= 1.9.25),
          preprocessCore (>= 1.9.0),
          splines,
          stats,
@@ -41,6 +41,7 @@ Collate: AllGenerics.R
          read.xysfiles.R
          utils-general.R
          utils-cluster.R
+         utils-snp.R
          functions-crlmm.R
          functions-snprma.R
          justSNPRMA.R
